--- a/src/main/resources/DoctorPage.fxml
+++ b/src/main/resources/DoctorPage.fxml
@@ -21,7 +21,7 @@
       <HBox alignment="CENTER" layoutX="1018.0" layoutY="28.0" spacing="10.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="(Doctor Name)" />
-            <Button fx:id="logout_btn" mnemonicParsing="false" onAction="#onLogoutClick" text="Log Out" />
+            <Button fx:id="logout_btn" mnemonicParsing="false" onAction="#onLogoutClick" text="%logout" />
          </children>
       </HBox>
       <ImageView fitHeight="692.0" fitWidth="593.0" layoutX="304.0" layoutY="94.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
@@ -32,7 +32,7 @@
       <Separator layoutX="13.0" layoutY="80.0" prefHeight="0.0" prefWidth="1174.0" />
       <VBox alignment="TOP_CENTER" layoutX="415.0" layoutY="494.0" spacing="15.0">
          <children>
-            <Label fx:id="emergency_label" text="EMERGENCY" textFill="RED">
+            <Label fx:id="emergency_label" text="%emergency_label" textFill="RED">
                <font>
                   <Font size="60.0" />
                </font>
@@ -49,7 +49,7 @@
          </children>
       </VBox>
       <fx:include fx:id="serviceArea" layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0" source="ServiceAreaRequests.fxml" />
-      <Button layoutX="545.0" layoutY="696.0" mnemonicParsing="false" onAction="#openLog" text="View Log">
+      <Button layoutX="545.0" layoutY="696.0" mnemonicParsing="false" onAction="#openLog" text="%view_log">
          <font>
             <Font size="23.0" />
          </font>
