--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -15,16 +15,16 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+
 <BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageController">
    <top>
       <ExpansionPanel fx:id="exp_panel" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <expandedContent>
             <BorderPane prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
                <left>
-                  <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
+                  <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
                         <Insets left="10.0" />
                      </BorderPane.margin>
@@ -48,7 +48,7 @@
          <collapsedContent>
             <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
                <left>
-                  <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
+                  <Label fx:id="time2" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
                         <Insets left="10.0" />
                      </BorderPane.margin>
@@ -59,7 +59,7 @@
       </ExpansionPanel>
    </top>
    <center>
-      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <StackPane fx:id="stack_pane" prefHeight="652.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="692.0" fitWidth="593.0" opacity="0.05" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
                <image>
@@ -69,25 +69,27 @@
                   <Insets top="30.0" />
                </StackPane.margin>
             </ImageView>
-            <VBox alignment="TOP_CENTER" prefHeight="438.0" prefWidth="1200.0" spacing="50.0">
+            <VBox alignment="TOP_CENTER" prefHeight="570.0" prefWidth="1200.0" spacing="50.0">
                <children>
-                   <JFXComboBox focusColor="#4863a0" labelFloat="true" promptText="%quick_locations" style="-fx-font-size: 23; -fx-text-align: center;" />
-                   <JFXComboBox fx:id="combobox_start" focusColor="#4863a0" labelFloat="true" promptText="%start_location" style="-fx-font-size: 23;" />
-                   <JFXComboBox fx:id="combobox_end" labelFloat="true" promptText="%end_location" style="-fx-font-size: 23; -jfx-focus-color-font-size: 12;" />
-                   <JFXToggleButton style="-fx-font-size: 23;" text="%stairs" toggleColor="#b7b8b6" toggleLineColor="#4863a0" />
-                   <JFXButton fx:id="pathfind" buttonType="RAISED" onAction="#onPathfindClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%directions_button" />
-                   <MenuButton fx:id="language_selector" >
-                       <items>
-                           <MenuItem text="English" />
-                           <MenuItem text="Espanol" />
-                           <MenuItem text="Russian" />
-                       </items>
-                   </MenuButton>
+                  <JFXComboBox fx:id="quick_loc" focusColor="#4863a0" promptText="%quick_locations" style="-fx-font-size: 23; -fx-text-align: center;" />
+                  <JFXComboBox fx:id="combobox_start" focusColor="#4863a0" labelFloat="true" promptText="%start_location" style="-fx-font-size: 23;" />
+                  <JFXComboBox fx:id="combobox_end" focusColor="#4863a0" labelFloat="true" promptText="%end_location" style="-fx-font-size: 23; -jfx-focus-color-font-size: 12;" />
+                  <JFXToggleButton style="-fx-font-size: 23;" text="%stairs" toggleColor="#b7b8b6" toggleLineColor="#4863a0" />
+                  <JFXButton fx:id="pathfind" buttonType="RAISED" onAction="#onPathfindClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%directions_button" />
                </children>
                <StackPane.margin>
                   <Insets top="40.0" />
                </StackPane.margin>
             </VBox>
+            <HBox alignment="BOTTOM_LEFT" prefHeight="152.0" prefWidth="273.0" spacing="20.0" StackPane.alignment="BOTTOM_LEFT">
+               <children>
+                  <JFXComboBox fx:id="language_selector" focusColor="#4863a0" labelFloat="true" promptText="%language" style="-fx-font-size: 18;" />
+                  <JFXButton buttonType="RAISED" style="-fx-background-color: #B7B8B6; -fx-font-size: 18;" text="%confirm" />
+               </children>
+               <StackPane.margin>
+                  <Insets bottom="10.0" left="10.0" top="700.0" />
+               </StackPane.margin>
+            </HBox>
          </children>
       </StackPane>
    </center>
