--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -16,7 +15,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyMapController">
    <top>
@@ -60,69 +58,75 @@
         </ScrollPane>
    </center>
    <right>
-      <VBox alignment="TOP_CENTER" prefHeight="740.0" prefWidth="242.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="740.0" prefWidth="242.0" spacing="30.0" BorderPane.alignment="CENTER">
          <children>
-              <VBox alignment="TOP_CENTER" prefHeight="480.0" prefWidth="232.0" spacing="15.0">
-                  <children>
-                  <JFXTextField fx:id="floor" alignment="CENTER" focusColor="#4863a0" promptText="%floor">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </JFXTextField>
-                  <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0" promptText="%building">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </JFXTextField>
-                  <JFXTextField fx:id="loc_type" alignment="CENTER" focusColor="#4863a0" promptText="%location_type">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </JFXTextField>
-                  <JFXTextField fx:id="long_name" alignment="CENTER" focusColor="#4863a0" promptText="%long_name">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </JFXTextField>
-                  <JFXTextField fx:id="short_name" alignment="CENTER" focusColor="#4863a0" promptText="%short_name">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </JFXTextField>
-                  <JFXCheckBox fx:id="add_edge_check" checkedColor="#4863a0" text="%add_path">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </JFXCheckBox>
-                  <JFXButton fx:id="add_loc" buttonType="RAISED" onAction="#onAddLocClick" style="-fx-background-color: #B7B8B6;" text="%add_location">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </JFXButton>
-                      <Label fx:id="add_loc_fail" textFill="RED" />
-                  </children>
-              </VBox>
+            <JFXComboBox fx:id="location_or_path" focusColor="#4863a0" onAction="#onChooseAction" promptText="%location_or_path" style="-fx-font-size: 23;" />
+            <StackPane prefHeight="150.0" prefWidth="200.0">
+               <children>
+                    <VBox fx:id="add_node_box" alignment="CENTER" prefHeight="389.0" prefWidth="242.0" spacing="15.0" visible="false">
+                        <children>
+                        <JFXTextField fx:id="floor" alignment="CENTER" focusColor="#4863a0" promptText="%floor">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0" promptText="%building">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXComboBox fx:id="loc_type" focusColor="#4863a0" promptText="%location_type" style="-fx-font-size: 23;" />
+                        <JFXTextField fx:id="long_name" alignment="CENTER" focusColor="#4863a0" promptText="%long_name">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXTextField fx:id="short_name" alignment="CENTER" focusColor="#4863a0" promptText="%short_name">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXButton fx:id="add_loc" buttonType="RAISED" onAction="#onAddLocClick" style="-fx-background-color: #B7B8B6;" text="%add_location">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton fx:id="add_loc_cancel" buttonType="RAISED" onAction="#onAddLocCancelClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" visible="false" />
+                            <Label fx:id="add_loc_fail" textFill="RED" />
+                        </children>
+                    </VBox>
+                  <VBox fx:id="add_edge_box" alignment="CENTER" spacing="20.0" visible="false">
+                     <children>
+                        <JFXTextField fx:id="location_one" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXTextField fx:id="location_two" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_two">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXButton fx:id="add_edge" buttonType="RAISED" onAction="#onAddEdgeClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%add_edge" />
+                        <JFXButton fx:id="cancel_edge" buttonType="RAISED" onAction="#onCancelEdgeClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" />
+                     </children>
+                  </VBox>
+                  <VBox fx:id="delete_loc_box" alignment="CENTER" spacing="20.0" visible="false">
+                     <children>
+                        <JFXTextField fx:id="location_to_delete" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXButton fx:id="delete_loc" buttonType="RAISED" onAction="#onDeleteLocClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%delete_location" />
+                        <JFXButton fx:id="cancel_delete" buttonType="RAISED" onAction="#onDeleteLocCancelClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" />
+                     </children>
+                  </VBox>
+               </children>
+            </StackPane>
             <HBox alignment="BOTTOM_CENTER" spacing="30.0">
                <children>
-                  <StackPane>
-                     <children>
-                          <Button fx:id="add_loc_cancel" mnemonicParsing="false" onAction="#onAddLocCancelClick" prefHeight="44.0" prefWidth="132.0" text="Cancel" visible="false">
-                              <font>
-                                  <Font size="23.0" />
-                              </font>
-                        </Button>
-                          <Button fx:id="delete_loc_cancel" mnemonicParsing="false" onAction="#onDeleteLocCancelClick" prefHeight="44.0" prefWidth="132.0" text="Cancel" visible="false">
-                              <font>
-                                  <Font size="23.0" />
-                              </font>
-                        </Button>
-                     </children>
-                  </StackPane>
-                    <ImageView fx:id="trash_can" fitHeight="40.0" fitWidth="46.0" onMouseClicked="#onTrashCanClick" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="@images/59-512.png" />
-                        </image>
-                    </ImageView>
+                  <StackPane />
                </children>
                <VBox.margin>
                   <Insets />
