--- a/src/main/resources/PathfindPage.fxml
+++ b/src/main/resources/PathfindPage.fxml
@@ -16,7 +16,6 @@
 <?import javafx.scene.shape.Polyline?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PathfindController">
    <top>
       <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
@@ -37,11 +36,11 @@
       </BorderPane>
    </top>
    <center>
-      <ScrollPane prefHeight="690.0" prefWidth="900.0" BorderPane.alignment="CENTER">
+      <ScrollPane fx:id="map_scroll_pane" hmax="5000.0" pannable="true" prefHeight="690.0" prefWidth="900.0" vmax="3400.0" BorderPane.alignment="CENTER">
         <content>
-          <AnchorPane layoutX="-500.0" layoutY="-500.0" minHeight="0.0" minWidth="0.0" prefHeight="1050.0" prefWidth="1250.0">
+          <AnchorPane fx:id="map_anchor_pane" layoutX="-500.0" layoutY="-500.0" minHeight="0.0" minWidth="0.0" prefHeight="2000.0" prefWidth="2000.0">
                <children>
-                  <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" layoutX="-2100.0" layoutY="-550.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/02_thesecondfloor.png" />
                      </image>
@@ -60,10 +59,10 @@
                        <effect>
                            <Lighting diffuseConstant="1.42" specularConstant="0.95" specularExponent="10.22" surfaceScale="2.9">
                                <bumpInput>
-                                   <Shadow height="11.12" radius="8.215" width="23.74" />
+                                   <Shadow height="20.59" radius="10.5825" width="23.74" />
                                </bumpInput>
                                <light>
-                                   <Light.Distant />
+                              <Light.Distant />
                                </light>
                            </Lighting>
                        </effect>
@@ -103,7 +102,7 @@
                   <Image url="@images/jpeg.jpg" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%3d_map" onAction="#toggleMappingType" />
+            <JFXButton buttonType="RAISED" onAction="#toggleMappingType" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%3d_map" />
          </children>
       </VBox>
    </right>
