--- a/src/main/resources/PathfindPage.fxml
+++ b/src/main/resources/PathfindPage.fxml
@@ -12,13 +12,15 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Polyline?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PathfindController">
    <top>
-      <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
+      <BorderPane fx:id="header_pane" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
          <left>
             <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
                <BorderPane.margin>
@@ -97,13 +99,67 @@
                   </Label>
                </children>
             </VBox>
-            <ImageView fx:id="qr_img" fitHeight="291.0" fitWidth="278.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="qr_img" fitHeight="291.0" fitWidth="278.0" onMouseClicked="#onQRClick" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/jpeg.jpg" />
                </image>
             </ImageView>
+            <JFXButton fx:id="toggle_map_btn" buttonType="RAISED" onAction="#toggleMappingType" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%3d_map" />
+            <HBox alignment="CENTER" spacing="30.0">
+               <children>
+                  <JFXButton buttonType="RAISED" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%up" />
+                  <JFXButton buttonType="RAISED" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%down" />
+               </children>
+            </HBox>
             <JFXButton buttonType="RAISED" onAction="#toggleMappingType" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%3d_map" />
          </children>
       </VBox>
    </right>
+   <center>
+      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <ScrollPane prefHeight="690.0" prefWidth="900.0">
+              <content>
+                <AnchorPane layoutX="-500.0" layoutY="-500.0" minHeight="0.0" minWidth="0.0" prefHeight="1050.0" prefWidth="1250.0">
+                     <children>
+                        <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" layoutX="-2100.0" layoutY="-550.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/02_thesecondfloor.png" />
+                           </image>
+                        </ImageView>
+                         <Polyline fx:id="path_polyline" fill="#ff000000" stroke="RED" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="8.0">
+                             <points>
+                                 <Double fx:value="-50.0" />
+                                 <Double fx:value="-40.0" />
+                                 <Double fx:value="50.0" />
+                                 <Double fx:value="-40.0" />
+                                 <Double fx:value="0.0" />
+                                 <Double fx:value="60.0" />
+                                 <Double fx:value="-50.0" />
+                                 <Double fx:value="-40.0" />
+                             </points>
+                             <effect>
+                                 <Lighting diffuseConstant="1.42" specularConstant="0.95" specularExponent="10.22" surfaceScale="2.9">
+                                     <bumpInput>
+                                         <Shadow height="11.12" radius="8.215" width="23.74" />
+                                     </bumpInput>
+                                     <light>
+                                         <Light.Distant />
+                                     </light>
+                                 </Lighting>
+                             </effect>
+                         </Polyline>
+                        <ImageView fx:id="destination_img" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/destinationIcon.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
+            <ImageView fx:id="expanded_qr" fitHeight="529.0" fitWidth="705.0" onMouseClicked="#onBigQRClick" pickOnBounds="true" preserveRatio="true" visible="false" />
+         </children>
+      </StackPane>
+   </center>
 </BorderPane>
