--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -40,13 +40,13 @@
       </BorderPane>
    </top>
    <center>
-        <ScrollPane prefHeight="690.0" prefWidth="900.0" BorderPane.alignment="CENTER">
+        <ScrollPane fx:id="scroll_pane" prefHeight="690.0" prefWidth="900.0" BorderPane.alignment="CENTER">
             <content>
-                <AnchorPane fx:id="pane" layoutX="-500.0" layoutY="-500.0" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick" prefHeight="1050.0" prefWidth="1250.0">
+                <AnchorPane fx:id="pane" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick">
                     <children>
-                        <ImageView fitHeight="3400.0" fitWidth="5000.0" layoutX="-2100.0" layoutY="-550.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="map" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@images/02_thesecondfloor.png" />
+                                <Image url="@images/01_thefirstfloor.png" />
                             </image>
                         </ImageView>
                     </children>
@@ -65,11 +65,6 @@
                <children>
                     <VBox fx:id="add_node_box" alignment="CENTER" prefHeight="389.0" prefWidth="242.0" spacing="15.0" visible="false">
                         <children>
-                        <JFXTextField fx:id="floor" alignment="CENTER" focusColor="#4863a0" promptText="%floor">
-                           <font>
-                              <Font size="23.0" />
-                           </font>
-                        </JFXTextField>
                         <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0" promptText="%building">
                            <font>
                               <Font size="23.0" />
@@ -124,14 +119,7 @@
                   </VBox>
                </children>
             </StackPane>
-            <HBox alignment="BOTTOM_CENTER" spacing="30.0">
-               <children>
-                  <StackPane />
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </HBox>
+            <JFXComboBox fx:id="choose_floor" focusColor="#4863a0" onAction="#onChooseFloorChange" promptText="%choose_floor" style="-fx-font-size: 23;" />
          </children>
          <BorderPane.margin>
             <Insets left="10.0" right="10.0" top="10.0" />
