--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -70,9 +70,9 @@
             </ImageView>
             <VBox alignment="TOP_CENTER" prefHeight="570.0" prefWidth="1200.0" spacing="50.0">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Find Nearest" textAlignment="CENTER">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%find_nearest" textAlignment="CENTER">
                      <font>
-                        <Font size="20.0" />
+                        <Font size="23.0" />
                      </font>
                      <VBox.margin>
                         <Insets />
@@ -80,17 +80,17 @@
                   </Text>
                   <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="200.0" spacing="40.0">
                      <children>
-                        <JFXButton fx:id="INFO" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6;" text="Information">
+                        <JFXButton fx:id="INFO" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%information">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton fx:id="REST" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6;" text="Restroom">
+                        <JFXButton fx:id="REST" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%restroom">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton fx:id="DEPT" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6;" text="Deptartment">
+                        <JFXButton fx:id="DEPT" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%department">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -112,7 +112,7 @@
             <HBox alignment="BOTTOM_LEFT" prefHeight="152.0" prefWidth="273.0" spacing="20.0" StackPane.alignment="BOTTOM_LEFT">
                <children>
                   <JFXComboBox fx:id="language_selector" focusColor="#4863a0" labelFloat="true" promptText="%language" style="-fx-font-size: 18;" />
-                  <JFXButton buttonType="RAISED"  onAction="#onLanguageChange" style="-fx-background-color: #B7B8B6; -fx-font-size: 18;" text="%confirm" />
+                  <JFXButton buttonType="RAISED" onAction="#onLanguageChange" style="-fx-background-color: #B7B8B6; -fx-font-size: 18;" text="%confirm" />
                </children>
                <StackPane.margin>
                   <Insets bottom="10.0" left="10.0" top="700.0" />
