--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -40,7 +40,7 @@
       </BorderPane>
    </top>
    <center>
-        <ScrollPane fx:id="scroll_pane" prefHeight="690.0" prefWidth="900.0" BorderPane.alignment="CENTER">
+        <ScrollPane fx:id="scroll_pane" pannable="true" prefHeight="690.0" prefWidth="900.0" BorderPane.alignment="CENTER">
             <content>
                 <AnchorPane fx:id="pane" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick">
                     <children>
