--- a/src/main/resources/PathfindPage.fxml
+++ b/src/main/resources/PathfindPage.fxml
@@ -111,18 +111,17 @@
                   <JFXButton buttonType="RAISED" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%down" />
                </children>
             </HBox>
-            <JFXButton buttonType="RAISED" onAction="#toggleMappingType" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%3d_map" />
          </children>
       </VBox>
    </right>
    <center>
       <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ScrollPane prefHeight="690.0" prefWidth="900.0">
+            <ScrollPane hvalue="0.25" prefHeight="690.0" prefWidth="900.0" vvalue="0.25">
               <content>
-                <AnchorPane layoutX="-500.0" layoutY="-500.0" minHeight="0.0" minWidth="0.0" prefHeight="1050.0" prefWidth="1250.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0">
                      <children>
-                        <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" layoutX="-2100.0" layoutY="-550.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/02_thesecondfloor.png" />
                            </image>
