Minor menu fix (#86)
* Fixed spaces messing up node alphabetical order

* Changed the .gitignore so that we don't have to un-add the csvs each time. Added and then commented out the team F headers in case we ever need to switch.

* Re-added destination icon. Sorted images so that they are a lot more organized.

* Added two new icons

--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -46,7 +46,7 @@
                     <children>
                         <ImageView fx:id="map" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@images/01_thefirstfloor.png" />
+                                <Image url="@images/2dMaps/01_thefirstfloor.png" />
                             </image>
                         </ImageView>
                     </children>
