Intellij Inspection Fixes (#121)
* Develop (#33)

* basic project setup

* Added all the ui files that were used in ProjectC mockups (#2)

* changed variable name to align with standards

* Added all the ui files that were used in ProjectC mockups

* basic class setup to begin dev (#3)

* Added database functionality (#4)

* Add database functionality (#5)

Also fixed the missing .dat files.

* qr code working with passed string (#7)

* Added database controller (#6)

* Added database controller

* Implemented requested changes

* Fixing problems with gradle setup

* Added the ui for the modify map page (#8)

* Added the ui for the modify map page

* Update ModifyMapController.java

* Service request (#10)

* Implement ServiceRequest and ServiceType classes

* Make methods for getting service requests static

* javadoc for qr-code related functions (#11)

* Fix database functionality (#12)

* Fixed database functionality

* Syntax fixes

* Adding all user types (#9)

* Adding all user types

* Condensed setCanModMap, removed password functions, added basic tests

* Changed ArrayList of Emergency to ServiceType in Doctor (travis should pass now), cleaned up testing file

* Modify map ui (#14)

* Added the ui for the modify map page

* Update ModifyMapController.java

* Made the screens bigger (1200x800) and improved the modify node page

* Changed the size of screens. Updated modify map ui.

* Modify Map UI upadted

* Simple a star (#15)

* first push with pathfinder, path, and astarnodes. There is no hashmap of nodes and edges, still must be addded

* this time adding pathfinder, astarnode, and path with the actual file changes added correctly

* starting writing text directions based on turn angles

* first push with pathfinder, path, and astarnodes. There is no hashmap of nodes and edges, still must be addded

* this time adding pathfinder, astarnode, and path with the actual file change

--- a/src/main/resources/PathfindPage.fxml
+++ b/src/main/resources/PathfindPage.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0"
-            xmlns="http://javafx.com/javafx/8.0.141" fx:controller="edu.wpi.cs3733d18.teamS.controller.PathfindController">
+            xmlns="http://javafx.com/javafx/8.0.141"
+            fx:controller="edu.wpi.cs3733d18.teamS.controller.PathfindController">
     <top>
         <BorderPane fx:id="header_pane" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;"
                     BorderPane.alignment="CENTER">
