--- a/src/main/resources/Report.fxml
+++ b/src/main/resources/Report.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0"
-            xmlns="http://javafx.com/javafx/8.0.141" fx:controller="edu.wpi.cs3733d18.teamS.controller.ReportsController">
+            xmlns="http://javafx.com/javafx/8.0.141"
+            fx:controller="edu.wpi.cs3733d18.teamS.controller.ReportsController">
     <top>
         <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;"
                     BorderPane.alignment="CENTER">
