--- a/src/main/resources/ServiceAreaRequests.fxml
+++ b/src/main/resources/ServiceAreaRequests.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="1174.0"
-          xmlns="http://javafx.com/javafx/8.0.141" fx:controller="edu.wpi.cs3733d18.teamS.controller.ServiceAreaController">
+          xmlns="http://javafx.com/javafx/8.0.141"
+          fx:controller="edu.wpi.cs3733d18.teamS.controller.ServiceAreaController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
